Fix spacing in player list

--- a/src/index.css
+++ b/src/index.css
@@ -83,5 +83,5 @@ p {
 .sr-icon-svg {
     height: .8em;
     width: .8em;
-    margin-right: .3em;
+    margin-right: .25em;
 }
